syntax = "proto3";
option go_package = "api_pb";
package testapp.api;

import "google/api/annotations.proto";

service FooService {	
  rpc GetFoo (GetFooRequest) returns (GetFooResponse) {
    option (google.api.http) = {
      get:  "/foo"
    };
  }
}

message GetFooRequest {
}

message GetFooResponse {
}

